[gd_scene load_steps=2 format=3 uid="uid://55gme501i021"]

[ext_resource type="Script" uid="uid://b5t6w70o3w377" path="res://test.gd" id="1_37kl0"]

[node name="Test" type="Node2D"]
script = ExtResource("1_37kl0")

[node name="HostOID" type="LineEdit" parent="."]
offset_right = 381.0
offset_bottom = 54.0

[node name="Join" type="Button" parent="."]
offset_left = 144.0
offset_top = 67.0
offset_right = 182.0
offset_bottom = 98.0
text = "Join"

[node name="Host" type="Button" parent="."]
offset_left = 4.0
offset_top = 67.0
offset_right = 98.0
offset_bottom = 98.0
text = "Host Game"

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("uid://df1twqo5ukye7")
spawn_path = NodePath("..")

[connection signal="pressed" from="Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="Host" to="." method="_on_host_pressed"]
